--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytesseract~=0.3.10
-opencv-python~=4.9.0.80
-flask~=3.0.2
-pillow~=10.2.0
+pytesseract==0.3.10
+opencv-python==4.9.0.80
+Flask==3.0.2
+pillow==10.2.0
