--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytesseract==0.3.10
-opencv-python==4.9.0.80
-Flask==3.0.2
-pillow==10.2.0
+Flask==2.0.1
+pytesseract==0.3.8
+opencv-python-headless==4.5.3.56
+Pillow==8.3.2
